--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
+
 }
 
 android {
@@ -18,6 +20,8 @@ android {
             useSupportLibrary true
         }
     }
+
+
 
     buildTypes {
         release {
@@ -48,6 +52,8 @@ android {
 dependencies {
     def room_version = "2.4.2"
     def kotlin_version = "3.1.2"
+    apply plugin: 'kotlin-kapt'
+
 
     implementation 'androidx.compose.ui:ui:1.1.1'
     // Tooling support (Previews, etc.)
@@ -74,11 +80,17 @@ dependencies {
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
+    //GSON
+    implementation 'com.google.code.gson:gson:2.9.0'
+
+    //Timber
+    implementation 'com.jakewharton.timber:timber:5.0.1'
     // UI Tests
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.1.1'
 
     implementation "com.google.accompanist:accompanist-navigation-animation:0.24.2-alpha"
+
 
 }
