--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     def kotlin_version = "3.1.2"
     apply plugin: 'kotlin-kapt'
 
+    //Date
+    implementation("org.jetbrains.kotlinx:kotlinx-datetime:0.3.2")
+
 
     implementation 'androidx.compose.ui:ui:1.1.1'
     // Tooling support (Previews, etc.)
