--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,5 +110,7 @@ dependencies {
 
     implementation "com.google.accompanist:accompanist-navigation-animation:0.24.2-alpha"
 
+    //Splashscreen
+    implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
 
 }
