--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,7 +110,17 @@ dependencies {
 
     implementation "com.google.accompanist:accompanist-navigation-animation:0.24.2-alpha"
 
-    //Splashscreen
+    //Splashscreen, beware of updating
     implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-jackson:2.1.0'
+
+    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'io.coil-kt:coil-compose:1.3.1'
+
 
 }
